Fix overflow mural

--- a/src/styles/mural.css
+++ b/src/styles/mural.css
@@ -2,22 +2,21 @@
   width: 100%;
   height: 100vh;
   position: relative;
+  overflow: hidden;
 }
 
 .branch {
-  background-color: #CCC;
   position: absolute;
-  height: 100px;
-  width: 100px;
   overflow: hidden;
   box-sizing: border-box;
-  padding: 4px;
   transition: all ;
   display: flex;
   gap: 8px;
   flex-direction: column;
   cursor: pointer;
   user-select: none;
+  color: #FFF;
+  text-align: left;
 }
 
 .branch:hover > .branch__title {
@@ -25,8 +24,6 @@
 }
 
 .branch__title {
-  color: #FFF;
-  text-align: left;
   mix-blend-mode: difference;
   font-family: 'DynaPuff', cursive;
   overflow: hidden;
@@ -35,8 +32,6 @@
 }
 
 .branch__description {
-  color: #FFF;
-  text-align: left;
   mix-blend-mode: difference;
   font-family: 'Karla', sans-serif;
   text-overflow: ellipsis;
